# poc-pytest-split-github-actions

./: .coverage  .test_durations  README.md  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: unit-tests.yml
project/: functions.py
tests/: test_functions.py
